kubernetes-manifests/odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deployment
  namespace: icgroup
  labels:
    app: odoo
    env: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
        env: prod
    spec:
      containers:
      - name: odoo
        image: odoo:13
        ports:
        - containerPort: 8069
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
  namespace: icgroup
  labels:
    app: odoo
    env: prod
spec:
  selector:
    app: odoo
  ports:
  - port: 8069
    targetPort: 8069
  type: LoadBalancer
